adds carousel class

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,14 +4,20 @@
     box-sizing: border-box;
 }
 
-.hidden {
-    display: none;
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pet{
+    background-size: cover;
 }
 
 #pet {
-    width: 150px;
-    height: 150px;
-    background-size: cover;
+    width: 100px;
+    height: 100px;
 }
 
 .deer {
@@ -27,6 +33,11 @@
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 
+}
+
+
+.hidden {
+    display: none;
 }
 
 @keyframes idleDeer {
