--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
 }
 
-#game-info {
+.game-info {
     display: flex;
     flex-direction: column;
     align-items: center;
