--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -1,18 +1,17 @@
+/* ANCHOR idle animations */
+
 @keyframes idleDeer {
     from {
         background-image: url('../images/deer/idle/frame1.png');
     }
     25% {
         background-image: url('../images/deer/idle/frame2.png');
-        
     }
     75% {
         background-image: url('../images/deer/idle/frame3.png');
-        
     }
     to {
         background-image: url('../images/deer/idle/frame4.png');
-
     }
 }
 
@@ -23,11 +22,42 @@
     25% {
         background-image: url('../images/ghost/idle/frame2.png');
     }
-    75%{
+    75% {
         background-image: url('../images/ghost/idle/frame3.png');
     }
-    to{
+    to {
         background-image: url('../images/ghost/idle/frame4.png');
     }
+}
 
+/* ANCHOR walking animations */
+
+@keyframes walkingDeer {
+    from {
+        background-image: url('../images/deer/walk/frame1.png');
+    }
+    25% {
+        background-image: url('../images/deer/walk/frame2.png');
+    }
+    75% {
+        background-image: url('../images/deer/walk/frame3.png');
+    }
+    to {
+        background-image: url('../images/deer/walk/frame4.png');
+    }
+}
+
+@keyframes walkingGhost {
+    from {
+        background-image: url('../images/ghost/walk/frame1.png');
+    }
+    25% {
+        background-image: url('../images/ghost/walk/frame2.png');
+    }
+    75% {
+        background-image: url('../images/ghost/walk/frame3.png');
+    }
+    to {
+        background-image: url('../images/ghost/walk/frame4.png');
+    }
 }
