adds basic left and right movement keyframes

--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -1,2 +1,18 @@
-/* ANCHOR idle animations */
+@keyframes moveRight {
+    from {
+        left: 0;
+    }
 
+    to {
+        left:100%;
+    }
+}
+
+@keyframes moveLeft {
+    from {
+        left: 0;
+    }
+    to {
+        left: -100%;
+    }
+}
